# game

./: .gitignore  README.md  myapp.json  pyproject.toml  translation.py  try.kv  try.py  tryapp.json  tryapp.profile
.devcontainer/: devcontainer.json
calculator_project/: main.py  mycalculator.kv  pyproject.toml  settings.json
falling_comets_project/: pyproject.toml  settings.json
falling_comets_project/falling_comets/: animation.py  commet.py  commet_event.py  game.py  main.py  monster.py  player.py  projectile.py  sounds.py
falling_comets_project/falling_comets/assets/assets/sounds/: Marvel Opening Theme 128 kbps.m4a
game1_PongGame/: main.py  pong.kv
game2_Fortune/: fortune.kv  main.py  my_fortune2.py  neuralrandom.kv
game2_MyFortune/: buildozer.spec  my_fortune.py
kivy_project/Galaxy_project/: file.json  galaxy.kv  main.py  menu.kv  menu.py  my.ini  my_settings.py  myapp.json  pagelayoutexample.kv  pagelayoutexample.py  pause.kv  pause.py  settings.kv  settings.py  ship.py  sounds.py  transforms.py  try.kv  try.py  try1.kv  try1.py  tryapp.profile  tuto.kv  tuto.py  user_actions.py  user_controls.kv  user_controls.py
kivy_project/resources_kivy/RESOURCES_KIVY/2_GALAXY/V2/: main.py
kivy_project/resources_kivy/RESOURCES_KIVY/2_GALAXY/V3/: main.py  user_actions.py
kivy_project/the_lab/: main.py  thelab.kv
kivy_tutorial/: main.py  my.kv
my_python_games/: Heart.py  pong_game.py
my_python_games/turtle_work/: pong_game.py
other_games/turtle_work/: Turtle_work.py
