[tool.poetry]
name = "calculator_project"
version = "0.1.1"
description = "This project helps me learn how to develop application with kivy module from python."
authors = ["Dede Assann <dedeassann20@gmail.com>"]
license = "Beginner in programming"

[tool.poetry.dependencies]
python = "^3.10"
Kivy = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pylint = "^2.15.2"
pytest = "^7.1.3"
mypy = "^0.971"
coverage = "^6.4.4"
Markdown = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
