[tool.poetry]
name = "jwetdede"
version = "0.1.0"
description = ""
authors = ["Tipan Verella (chromebook) <tipan.verella@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "^2.14.5"
mypy = "^0.971"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
